Remove the IconManager Reference and added a few services for hyprclipx

--- a/hyprpm.toml
+++ b/hyprpm.toml
@@ -10,5 +10,11 @@ build = [
     "cmake -DCMAKE_BUILD_TYPE=Release -B build",
     "cmake --build build",
     "mkdir -p $HOME/.local/bin && cp build/hyprclipx-ui $HOME/.local/bin/",
-    "mkdir -p $HOME/.config/iconmanager/helpers && cp helpers/clipman-daemon.py $HOME/.config/iconmanager/helpers/"
+    "cp helpers/clipman-daemon.py $HOME/.local/bin/",
+    "cp helpers/clipman-client.py $HOME/.local/bin/",
+    "cp helpers/get-caret-position.py $HOME/.local/bin/",
+    "mkdir -p $HOME/.config/hyprclipx",
+    "mkdir -p $HOME/.config/systemd/user && cp helpers/clipman.service $HOME/.config/systemd/user/",
+    "systemctl --user daemon-reload",
+    "systemctl --user enable clipman.service"
 ]
